# dmenu_drun

./: .gitignore  Cargo.toml  install
src/: main.rs
