# SPDX-FileCopyrightText: 2025 Rehpotsirhc
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "dmenu_drun"
version = "0.3.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
